--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>breeze-dashboard-flare</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <title>Modern SaaS Dashboard</title>
+    <meta name="description" content="Minimalist SaaS Dashboard with Confetti Animation" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="breeze-dashboard-flare" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Modern SaaS Dashboard" />
+    <meta property="og:description" content="Minimalist SaaS Dashboard with Confetti Animation" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
